<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@mipmap/ic_logo" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:lines="2"
                android:text="@string/login_title"
                android:textSize="16sp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name"
                    android:inputType="textPersonName"
                    android:maxLength="50" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:visibility="visible">

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Mobile"
                    android:inputType="number"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxLength="50" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/proceed"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_white"
                android:gravity="center"
                android:text="@string/loggin"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/fp_link"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fp_login"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/loggin" />

                <TextView
                    android:id="@+id/fp_signup"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/signup" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/below_cont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:text="@string/forgot_password"
                    android:textSize="16sp" />


                <LinearLayout
                    android:id="@+id/or_cont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0.5dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="32dp"
                        android:layout_weight="1"
                        android:background="#73ffffff" />

                    <TextView
                        android:id="@+id/or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:text="or"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password"
                        app:layout_constraintVertical_bias="0.029" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0.5dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="32dp"
                        android:layout_weight="1"
                        android:background="#73ffffff" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/socials"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/fb"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_facebook"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp">

                        <TextView
                            android:id="@+id/facebook_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:drawableLeft="@mipmap/ic_facebook"
                            android:gravity="center_vertical"
                            android:text="@string/login_with_facebook"
                            android:textAllCaps="false"
                            android:textColor="#ffffff"
                            android:textSize="11sp" />

                    </RelativeLayout>

                    <View
                        android:id="@+id/social_divider"
                        android:layout_width="8dp"
                        android:layout_height="1dp" />

                    <RelativeLayout
                        android:id="@+id/google"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_google"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp">

                        <TextView
                            android:id="@+id/google_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:drawableLeft="@mipmap/ic_google"
                            android:drawablePadding="4dp"
                            android:gravity="center_vertical"
                            android:text="@string/login_with_facebook"
                            android:textAllCaps="false"
                            android:textColor="#ffffff"
                            android:textSize="11sp" />

                    </RelativeLayout>


                </LinearLayout>


                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/loggin_terms"
                    android:textSize="14sp" />


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


    <TextView
        android:id="@+id/signin_signup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:background="#3f000000"
        android:gravity="center"
        android:tag="0"
        android:text="@string/dont_have_account"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
